# ori

./: README.md  pyproject.toml
docs/: vision.md
specs/: repository-model.md
src/: README.md
src/collector/: repository.py
